[gd_scene load_steps=24 format=3 uid="uid://ddb05cvkx1t8x"]

[ext_resource type="Script" uid="uid://03s6p8nxnaum" path="res://scenes/minigames/water_minigame/water_minigame.gd" id="1_apnnh"]
[ext_resource type="Script" uid="uid://cb7sjvdpw6w7q" path="res://scenes/minigames/water_minigame/pipe_grid.gd" id="2_avfrl"]
[ext_resource type="Texture2D" uid="uid://cibxl5agxvg5k" path="res://assets/minigames/water/toolbox.png" id="2_ll52j"]
[ext_resource type="Texture2D" uid="uid://bua580gwwec5p" path="res://assets/minigames/water/water_background.png" id="2_vqru3"]
[ext_resource type="Script" uid="uid://dy3qsn7pijtkf" path="res://scenes/minigames/water_minigame/pipes_holder.gd" id="3_6nc0b"]
[ext_resource type="Texture2D" uid="uid://eq1mwbit8wdh" path="res://assets/Buttons/Buttons-Default.png" id="3_n36uu"]
[ext_resource type="Texture2D" uid="uid://qyv512r55b8l" path="res://assets/minigames/water/water tank.png" id="4_3u2sk"]
[ext_resource type="Texture2D" uid="uid://bgqpbdcl6mxk4" path="res://assets/minigames/water/Soil Background.png" id="4_8de48"]
[ext_resource type="Texture2D" uid="uid://cy5ppnjtw4ibj" path="res://assets/Buttons/Buttons-Hover.png" id="4_lcuwq"]
[ext_resource type="Texture2D" uid="uid://ddok06syrs7ff" path="res://assets/minigames/water/water entry.png" id="5_jyaov"]
[ext_resource type="StyleBox" uid="uid://yt1wxt7qn1jr" path="res://assets/Buttons/button_hover.tres" id="5_l1bk7"]
[ext_resource type="StyleBox" uid="uid://78a5ftygbdck" path="res://assets/Buttons/button_normal.tres" id="6_ll52j"]
[ext_resource type="Texture2D" uid="uid://cwcetagfer838" path="res://assets/minigames/water/water exit.png" id="6_ym1a2"]
[ext_resource type="StyleBox" uid="uid://c36ax7xm4d61w" path="res://assets/panel.tres" id="13_jyaov"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3e8u"]
atlas = ExtResource("3_n36uu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1bk7"]
atlas = ExtResource("4_lcuwq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n36uu"]
atlas = ExtResource("4_lcuwq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll52j"]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.184314, 0.392157, 0.439216, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 6.0
expand_margin_top = 12.0
expand_margin_right = 6.0
expand_margin_bottom = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ll52j"]
atlas = ExtResource("3_n36uu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqru3"]
atlas = ExtResource("4_lcuwq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u2sk"]
atlas = ExtResource("4_lcuwq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwc6x"]
atlas = ExtResource("4_lcuwq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apnnh"]
size = Vector2(800, 800)

[node name="WaterMinigame" type="Node2D"]
z_index = 1
script = ExtResource("1_apnnh")
start_point = Vector2i(2, 0)
end_point = Vector2i(2, 4)
pipe_def = Dictionary[String, int]({
"UPDOWN": 5
})
metadata/_custom_type_script = "uid://03s6p8nxnaum"

[node name="Background" type="Control" parent="."]
custom_minimum_size = Vector2(0, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -791.5
offset_right = 500.0
offset_bottom = 791.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Bg" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_vqru3")
expand_mode = 5
stretch_mode = 6

[node name="PipeOut" type="TextureRect" parent="Background/Bg"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 218.0
offset_right = 500.0
offset_bottom = 1657.03
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("6_ym1a2")
expand_mode = 5

[node name="PipeHolder" type="TextureRect" parent="Background/Bg"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -515.0
offset_top = 306.0
offset_right = 511.0
offset_bottom = 1553.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("2_ll52j")
expand_mode = 1

[node name="Tank" type="TextureRect" parent="Background/Bg"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 1439.02
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("4_3u2sk")
expand_mode = 5

[node name="PipeIn" type="TextureRect" parent="Background/Bg"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 1439.02
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("5_jyaov")
expand_mode = 5

[node name="Margins" type="MarginContainer" parent="Background"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Top" type="HBoxContainer" parent="Background/Margins"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 25
alignment = 1

[node name="Back" type="TextureButton" parent="Background/Margins/Top"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_n3e8u")
texture_pressed = SubResource("AtlasTexture_l1bk7")
texture_hover = SubResource("AtlasTexture_n36uu")

[node name="Filters" type="PanelContainer" parent="Background/Margins/Top"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ll52j")

[node name="VBox" type="VBoxContainer" parent="Background/Margins/Top/Filters"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Background/Margins/Top/Filters/VBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Polluted with:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Filters" type="Label" parent="Background/Margins/Top/Filters/VBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "Sand"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Undo" type="TextureButton" parent="Background/Margins/Top"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
disabled = true
texture_normal = SubResource("AtlasTexture_ll52j")
texture_pressed = SubResource("AtlasTexture_vqru3")
texture_hover = SubResource("AtlasTexture_3u2sk")
texture_disabled = SubResource("AtlasTexture_iwc6x")

[node name="Panel" type="Panel" parent="Background"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("13_jyaov")

[node name="RunWater" type="Button" parent="Background"]
z_index = 1
layout_mode = 2
offset_left = 264.0
offset_top = 1485.5
offset_right = 736.0
offset_bottom = 1627.5
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = ExtResource("5_l1bk7")
theme_override_styles/pressed = ExtResource("5_l1bk7")
theme_override_styles/normal = ExtResource("6_ll52j")
text = "Run Water"

[node name="Grid" type="Area2D" parent="."]
z_index = 1
position = Vector2(-400, -524.84)
script = ExtResource("2_avfrl")

[node name="GridCollision" type="CollisionShape2D" parent="Grid"]
position = Vector2(400, 400)
shape = SubResource("RectangleShape2D_apnnh")

[node name="GridBackground" type="Sprite2D" parent="."]
position = Vector2(0, -124.84)
scale = Vector2(0.488, 0.488)
texture = ExtResource("4_8de48")
region_enabled = true
region_rect = Rect2(0, 0, 1640, 1640)

[node name="Pipes" type="ScrollContainer" parent="."]
z_index = 1
custom_minimum_size = Vector2(300, 90)
offset_left = -340.0
offset_top = 373.0
offset_right = 336.0
offset_bottom = 637.0
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 4
vertical_scroll_mode = 0
script = ExtResource("3_6nc0b")
metadata/_custom_type_script = "uid://dy3qsn7pijtkf"

[node name="HBoxContainer" type="HBoxContainer" parent="Pipes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Background/Margins/Top/Back" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Background/Margins/Top/Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="Background/RunWater" to="." method="_on_run_water_pressed"]
[connection signal="area_entered" from="Grid" to="Grid" method="_on_area_entered"]
[connection signal="area_exited" from="Grid" to="Grid" method="_on_area_exited"]
[connection signal="input_event" from="Grid" to="." method="_on_grid_input_event"]
